# curseforge-fingerprint

./: .gitignore  CMakeLists.txt  README.md  fingerprint.cpp  fingerprint.h  main.cpp  ogfingerprint.cpp  ogfingerprint.h  vcpkg.json
